--- a/.github/workflows/configuration_variable.yml
+++ b/.github/workflows/configuration_variable.yml
@@ -1,7 +1,6 @@
-# This is a basic workflow to help you get started with Actions
+# This is configuration variable workflow in Actions
 
 name: Configuration Variable workflow
-
 # Controls when the workflow will run
 on:
  workflow_dispatch
@@ -23,9 +22,3 @@ jobs:
         run: echo "$Greeting $FirstName is using $cloud with projet ${{vars.project_id}}"
         env:
           FirstName: Parul
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
