--- a/.github/workflows/user_input.yml
+++ b/.github/workflows/user_input.yml
@@ -1,6 +1,6 @@
-# This is a workflow for demonstrating context variables in Github Actions
+# This is a workflow for demonstrating user input variables in Github Actions
 
-name: Testing context variable
+name: User Input Variable
 
 on:
   workflow_dispatch:
@@ -19,8 +19,8 @@ jobs:
   add_two_numbers:
     runs-on: ubuntu-latest
     steps:
-      - name: "Adding two numbers"
+      - name: Adding two numbers
         id: sum
-        run: echo "::set-output name=sum::${{${{ inputs.number1 }} + ${{ inputs.number2 }}}}"
-      - name: "Display Sum"
+        run: echo "::set-output name= sum::$((${{ inputs.number1 }} + ${{ inputs.number2 }}))"
+      - name: Display Sum
         run: echo "The sum of ${{ inputs.number1 }} and ${{ inputs.number2 }} is ${{ steps.sum.outputs.sum }}"
