--- a/.github/workflows/user_input.yml
+++ b/.github/workflows/user_input.yml
@@ -21,6 +21,6 @@ jobs:
     steps:
       - name: Adding two numbers
         id: sum
-        run: echo "$((${{ inputs.number1 }} + ${{ inputs.number2 }}))" >> ${{vars.sum}}
+        run: echo "::set-output name=sum::$((${{ inputs.number1 }} + ${{ inputs.number2 }}))"
       - name: Display Sum
-        run: echo "The sum of ${{ inputs.number1 }} and ${{ inputs.number2 }} is ${{vars.sum}}"
+        run: echo "The sum of ${{ inputs.number1 }} and ${{ inputs.number2 }} is ${{ steps.sum.outputs.sum}}"
